spacing issue

--- a/css/responsive-and-slider.css
+++ b/css/responsive-and-slider.css
@@ -797,7 +797,7 @@
     margin-top:50px;
   }
   .subcr {
-    left: 451px !important;
+    /* left: 451px !important; */
   }
   }
   .slider-indicators>* {
